second draft website

--- a/index.html
+++ b/index.html
@@ -36,33 +36,25 @@
         skills and furthering my career as a junior developer.</p>
 </div>
 
-<div class="Hobbies-and-interests">
-    <h4 id="h4-title">Hobbies and Interests</h4>
+<h4 id="h4-title">Interests</h4>
+    <div class="hobbies-and-interests">
     <p> In my spare time I love travelling. Italy is one of my favourite countries to visit. I also enjoy looking
         going for
         long walks and borrowing my friend's doggy's for the occasion! </p>
-    <p> When I'm not travelling or borrowing dogs, I like going to festivals with my friends.</p>
-    <figure>
-        <img id="LisaDog" src="images/LisaDogsitting.jpeg" alt="Photograph of Lisa and Ziggy">
-        <br />
-        <figcaption>Dogsitting Ziggy</figcaption>
+    <p> When I'm not travelling or borrowing dogs, I like going to festivals with my friends.</p></div>
+    <div id="pictures-of-hobbies">
         <figure>
-            <img id="Visiting-Pisa" src="images/Lisa.Pisa.jpeg" alt="Photograph of Lisa in Pisa" width="300" height=""
-                200">
-            <br />
-            <figcaption>
-                Visiting Pisa
-            </figcaption>
+            <img id="Visiting-Pisa" src="images/Lisa.Pisa.jpeg" alt="Photograph of Lisa in Pisa" width="300" height="200">
+            <figcaption>Visiting Pisa</figcaption>
         </figure>
-
-    </figure>
 </div>
 
 
 
 
+
 <footer>
-    <div class="“socials”">
+    <div class="socials">
         <h5 id="h5-title">My Socials</h5>
         <p>Follow me on <a href="">Twitter</a>!</p>
         <p>Follow me on <a href="">Instagram</a>!</p>
