--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <title>Lisa Wyers</title>
         <div class="heading">
         <h1 id="h1">Lisa Wyers</h1>
-        <h2 id="h2">Career Change Goals</h2>
-        <div class="main-pic-With-text">
-            <img src="images/LisaWyers Small 2.jpeg" alt="Photograph of Lisa Wyers"></div>
+            <img id="main-pic-With-text" src="images/LisaWyers Small 2.jpeg" alt="Photograph of Lisa Wyers"></div>
         <li class="navigation">
             <ul>
             <li><a href="./pages/projects.html">Contact Me</a></li>
@@ -41,10 +39,10 @@
     <p> In my spare time I love travelling. Italy is one of my favourite countries to visit. I also enjoy looking
         going for
         long walks and borrowing my friend's doggy's for the occasion! </p>
-    <p> When I'm not travelling or borrowing dogs, I like going to festivals with my friends.</p></div>
+    <p> When I'm not travelling or borrowing dogs, I like going swimming outdoors. My family home in Northern Ireland is in a seaside town and this is one of my favourite places to swim.</p></div>
     <div id="pictures-of-hobbies">
         <figure>
-            <img id="Visiting-Pisa" src="images/Lisa.Pisa.jpeg" alt="Photograph of Lisa in Pisa" width="300" height="200">
+            <img id="Visiting-Pisa" src="images/Lisa.Pisa.jpeg" alt="Photograph of Lisa in Pisa" width="300" height="300">
             <figcaption>Visiting Pisa</figcaption>
         </figure>
 </div>
